CITTA のリファクタリング